Fix wordwrap on note

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ body {
 h3 {
   color: var(--espresso);
 }
+pre {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
 /*****************************************************************
   - Header Section
 ******************************************************************/
